dev

Single thread for hashlists load in DB
Search already found hashes which exists in new hashlist
Single thread for work result parse (outfile)
Search found hashes in other hashlists in system
cron.py => hbs.py